--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import './admin/main/home-page-admin.scss';
 @import './component/log-res.scss';
 @import './component/profile-page.scss';
+@import './component/footer.scss';
 html,
 body {
     font-family: 'Raleway', sans-serif !important;
