--- a/src/styles/component/profile-page.scss
+++ b/src/styles/component/profile-page.scss
@@ -48,7 +48,77 @@
     .right-profile {
         width: 70%;
         padding: 10px;
-
+        .update-info {
+            form {
+                max-height: 470px;
+                overflow: scroll;
+                overflow-x: hidden;
+                &::-webkit-scrollbar {
+                    width: 3px;
+                }
+            
+                &::-webkit-scrollbar-track {
+                    // box-shadow: inset 0 0 5px black; 
+                    display: none;
+                }
+            
+                &::-webkit-scrollbar-thumb {
+                    background-color: $primary_color;
+                    border-radius: 10px;
+                }
+                .register-intro {
+                    margin-bottom: 20px;
+                    label {
+                        width: 100%;
+                        text-align: center;
+                        font-size: large;
+                        color: #98F1F7;
+                        font-weight: bold;
+                    }
+                }
+                .form-group {
+                    display: flex;
+                    justify-content: space-between;
+                    .ant-form-item {
+                        width: 49%;
+                    }
+                }
+                .ant-form-item {
+                    .ant-row {
+                        .ant-col {
+                            label {
+                                font-weight: bold !important;
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+                .form-login-option {
+                    .option {
+                        text-align: right;
+                        font-style: italic;
+                        a {
+                            color: #FE6A6A;
+                            font-weight: bold !important;
+                        }
+                    }
+                    .btn-login {
+                        text-align: center;
+                        margin-top: 10px;
+                        margin-bottom: 10px;
+                    }
+                    .notify {
+                        label{
+                            width: 100%;
+                            text-align: right;
+                            opacity: 0.8;
+                            font-style: italic;
+                            font-size: 12px;
+                        }
+                    }
+                }
+            }
+        }
     }
     }
 }
