--- a/src/styles/override-style/antd-override.scss
+++ b/src/styles/override-style/antd-override.scss
@@ -65,3 +65,11 @@
         border-radius: 100%;
     }
 }
+
+.ant-spin {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
