--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
 @import './component/log-res.scss';
 @import './component/profile-page.scss';
 @import './component/footer.scss';
+@import './admin.scss';
 html,
 body {
     font-family: 'Raleway', sans-serif !important;
