--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,6 @@ $header_title_background: #363636;
 $primary_color: #35c0c5;
 $border_color: #d6d6d6;
 $status: #0AA616;
+$success_color: #45C609;
+$warning_color: #EEC210;
+$danger_color: #BF0707;
