--- a/src/styles/admin/main/home-page-admin.scss
+++ b/src/styles/admin/main/home-page-admin.scss
@@ -2,7 +2,8 @@
     .main {
         display: flex;
         .right-page {
-            margin: 0 auto;
+            width: 100%;
+            margin: 10px 20px;
             margin-top: 30px;
             margin-bottom: 20px;
             .admin-add-account {
@@ -26,6 +27,36 @@
                                 opacity: 0.8;
                                 font-style: italic;
                                 text-align: right;
+                            }
+                        }
+                    }
+                }
+            }
+            .list-account {
+                label {
+                    width: 100%;
+                    text-align: center;
+                    font-size: 20px;
+                    font-weight: bold;
+                    margin-bottom: 20px;
+                }
+                table {
+                    thead {
+                        tr {
+                            th {
+                                &:last-child {
+                                    width: 20%;
+                                }
+                            }
+                        }
+                    }
+                    tbody {
+                        tr {
+                            td {
+                                &:last-child {
+                                    display: flex;
+                                    justify-content: space-around;
+                                }
                             }
                         }
                     }
