--- a/src/styles/admin/main/home-page-admin.scss
+++ b/src/styles/admin/main/home-page-admin.scss
@@ -7,6 +7,7 @@
             margin-top: 30px;
             margin-bottom: 20px;
             .admin-add-account {
+                margin: 0 auto;
                 width: 700px;
                 form {
                     .register-intro{
